--- a/src/components/LessonPage/Content.scss
+++ b/src/components/LessonPage/Content.scss
@@ -41,11 +41,12 @@ $checkbox-blue: #abdbea;
   }
 }
 
-.check,
-.activity,
-.save {
-  @include styledList;
-}
+// TODO: Get this into section component?
+//.check,
+//.activity,
+//.save {
+//  @include styledList;
+//}
 
 // code blocks
 pre > code {
@@ -73,19 +74,19 @@ section.activity {
   }
 }
 
-section.check {
-  // check lists
-  h2 {
-    padding-top: 4px;
-    padding-bottom: 9px;
-
-    img {
-      height: 40px;
-      vertical-align: text-bottom;
-      padding-right: 10px;
-    }
-  }
-}
+//section.check {
+//  // check lists
+//  h2 {
+//    padding-top: 4px;
+//    padding-bottom: 9px;
+//
+//    img {
+//      height: 40px;
+//      vertical-align: text-bottom;
+//      padding-right: 10px;
+//    }
+//  }
+//}
 
 section.try {
   background: #abdbea;
@@ -115,36 +116,36 @@ section.flag {
   padding-bottom: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
-  h2 {
-    color: rgb(54, 161, 55);
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-top: 15px;
-    padding-bottom: 10px;
-
-    img {
-      height: 40px;
-      vertical-align: text-bottom;
-      padding-right: 10px;
-    }
-  }
+  //h2 {
+  //  color: rgb(54, 161, 55);
+  //  margin-top: 10px;
+  //  margin-bottom: 10px;
+  //  padding-top: 15px;
+  //  padding-bottom: 10px;
+  //
+  //  img {
+  //    height: 40px;
+  //    vertical-align: text-bottom;
+  //    padding-right: 10px;
+  //  }
+  //}
 }
 
 section.save {
   border-top: 3px solid rgb(36, 90, 154);
   margin: 20px 0;
-  h2 {
-    color: rgb(36, 90, 154);
-    margin: 0;
-    padding-top: 10px;
-    padding-bottom: 20px;
-
-    img {
-      height: 40px;
-      vertical-align: text-bottom;
-      padding-right: 10px;
-    }
-  }
+  //h2 {
+  //  color: rgb(36, 90, 154);
+  //  margin: 0;
+  //  padding-top: 10px;
+  //  padding-bottom: 20px;
+  //
+  //  img {
+  //    height: 40px;
+  //    vertical-align: text-bottom;
+  //    padding-right: 10px;
+  //  }
+  //}
 }
 
 section.challenge {
