Add Heading1 and Section, and moved scss over there. Also, create folder Content

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -36,6 +36,9 @@ $color-level2: #368bd8;
 $color-level3: #d63838;
 $color-level4: $color-gray-dark;
 
+$checkbox-blue: #abdbea;
+
+
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
 $font-size-sm-pct: 118.75%; // 19px if base font is 16px
