--- a/src/components/Content/Heading2.scss
+++ b/src/components/Content/Heading2.scss
@@ -23,3 +23,16 @@
   vertical-align: text-bottom;
   padding-right: 10px;
 }
+
+.challenge {
+  color: #fff;
+  background: #00b1da;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 0;
+
+  @media print {
+    border-bottom: 2px #00b1da solid;
+  }
+}
